# playwright-python-test-automation

./: LICENSE  README.md  pyproject.toml
tests/: test_example.py
