[project]
name = "playwright-python-test-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "imukesh2508srijan",email = "mukesh.sharma@materialplus.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-playwright (>=0.6.2,<0.7.0)",
    "playwright (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
